--- a/p8105_hw3_xl2851.Rmd
+++ b/p8105_hw3_xl2851.Rmd
@@ -27,30 +27,59 @@ There are 134 aisles. Fresh vegetables are the most items ordered from.
 plot_aisle =
   aisle_count %>%
   filter(number_of_items>10000)%>%
-  ggplot(aes(x=aisle, y=number_of_items))
+  ggplot(aes(x=number_of_items, y=aisle))
 
 plot_aisle+geom_point()
 ```
 
 ## 1.3 Make a table showing the three most popular items in each of the aisles
 ```{r}
-pop_item=
   instacart %>%
   filter(aisle == c("baking ingredients","dog food care","packaged vegetables fruits"))%>%
-  group_by(aisle,product_name)%>%
-  count()%>%
-  summarize(
-    order_max=max(n))
+  group_by(aisle)%>%
+  count(product_name, name="num_of_items")%>%
+  arrange(desc(num_of_items))%>%
+  top_n(3)%>%
+  knitr::kable()
 ```
 
 ## 1.4 Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week
 ```{r}
-mean_hour=
   instacart %>%
   filter(product_name==c("Pink Lady Apples","Coffee Ice Cream"))%>%
   group_by(order_dow)%>%
   summarize(
     mean=mean(order_hour_of_day)
-  )
+  )%>%
+  knitr::kable()
 ```
 
+# problem 2
+## clean the data
+```{r}
+data("brfss_smart2010")
+tidied_brfss=
+  filter(brfss_smart2010,Topic=="Overall Health")%>%
+  janitor::clean_names() %>%
+  mutate(
+    response=as.factor(response),
+    response = forcats::fct_relevel(response, c("Poor","Fair","Good", "Very good","Excellent")))
+
+```
+
+## In 2002, which states were observed at 7 or more locations? What about in 2010?
+```{r}
+  separate(tidied_brfss,locationdesc,c("state","county"))%>%
+  group_by(state,year)%>%
+  summarise(n_location=n_distinct(county))%>%
+  filter(n_location>=7, year==2002)%>%
+  knitr::kable()
+
+  separate(tidied_brfss,locationdesc,c("state","county"))%>%
+  group_by(state,year)%>%
+  summarise(n_location=n_distinct(county))%>%
+  filter(n_location>=7, year==2010)%>%
+  knitr::kable()
+```
+
+## Make a “spaghetti” plot  
