--- a/p8105_hw3_xl2851.md
+++ b/p8105_hw3_xl2851.md
@@ -11,14 +11,14 @@ library(tidyr)
 library(tidyverse)
 ```
 
-    ## -- Attaching packages ------------------------------------------ tidyverse 1.2.1 --
+    ## -- Attaching packages --------------------------------------- tidyverse 1.2.1 --
 
-    ## √ ggplot2 3.2.1     √ purrr   0.3.2
-    ## √ tibble  2.1.3     √ dplyr   0.8.3
-    ## √ readr   1.3.1     √ stringr 1.4.0
-    ## √ ggplot2 3.2.1     √ forcats 0.4.0
+    ## v ggplot2 3.2.1     v purrr   0.3.2
+    ## v tibble  2.1.3     v dplyr   0.8.3
+    ## v readr   1.3.1     v stringr 1.4.0
+    ## v ggplot2 3.2.1     v forcats 0.4.0
 
-    ## -- Conflicts --------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -30,11 +30,138 @@ data("instacart")
 aisle_count=
 instacart %>%
   group_by(aisle) %>%
-  summarize(n=n())%>%
-  arrange(desc(n))
+  summarize(number_of_items=n())%>%
+  arrange(desc(number_of_items))
 ```
 
 There are 134 aisles. Fresh vegetables are the most items ordered
 from.
 
 ## 1.2 Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered.
+
+``` r
+plot_aisle =
+  aisle_count %>%
+  filter(number_of_items>10000)%>%
+  ggplot(aes(x=number_of_items, y=aisle))
+
+plot_aisle+geom_point()
+```
+
+![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+## 1.3 Make a table showing the three most popular items in each of the aisles
+
+``` r
+  instacart %>%
+  filter(aisle == c("baking ingredients","dog food care","packaged vegetables fruits"))%>%
+  group_by(aisle)%>%
+  count(product_name, name="num_of_items")%>%
+  arrange(desc(num_of_items))%>%
+  top_n(3)%>%
+  knitr::kable()
+```
+
+    ## Selecting by num_of_items
+
+| aisle                      | product\_name                                   | num\_of\_items |
+| :------------------------- | :---------------------------------------------- | -------------: |
+| packaged vegetables fruits | Organic Baby Spinach                            |           3324 |
+| packaged vegetables fruits | Organic Raspberries                             |           1920 |
+| packaged vegetables fruits | Organic Blueberries                             |           1692 |
+| baking ingredients         | Light Brown Sugar                               |            157 |
+| baking ingredients         | Pure Baking Soda                                |            140 |
+| baking ingredients         | Organic Vanilla Extract                         |            122 |
+| dog food care              | Organix Grain Free Chicken & Vegetable Dog Food |             14 |
+| dog food care              | Organix Chicken & Brown Rice Recipe             |             13 |
+| dog food care              | Original Dry Dog                                |              9 |
+
+## 1.4 Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week
+
+``` r
+  instacart %>%
+  filter(product_name==c("Pink Lady Apples","Coffee Ice Cream"))%>%
+  group_by(order_dow)%>%
+  summarize(
+    mean=mean(order_hour_of_day)
+  )%>%
+  knitr::kable()
+```
+
+    ## Warning in product_name == c("Pink Lady Apples", "Coffee Ice Cream"):
+    ## longer object length is not a multiple of shorter object length
+
+| order\_dow |     mean |
+| ---------: | -------: |
+|          0 | 12.76471 |
+|          1 | 12.67500 |
+|          2 | 12.88235 |
+|          3 | 14.50000 |
+|          4 | 13.60870 |
+|          5 | 12.87500 |
+|          6 | 12.07692 |
+
+# problem 2
+
+## clean the data
+
+``` r
+data("brfss_smart2010")
+tidied_brfss=
+  filter(brfss_smart2010,Topic=="Overall Health")%>%
+  janitor::clean_names() %>%
+  mutate(
+    response=as.factor(response),
+    response = forcats::fct_relevel(response, c("Poor","Fair","Good", "Very good","Excellent")))
+```
+
+## In 2002, which states were observed at 7 or more locations? What about in 2010?
+
+``` r
+  separate(tidied_brfss,locationdesc,c("state","county"))%>%
+  group_by(state,year)%>%
+  summarise(n_location=n_distinct(county))%>%
+  filter(n_location>=7, year==2002)%>%
+  knitr::kable()
+```
+
+    ## Warning: Expected 2 pieces. Additional pieces discarded in 10625 rows [1,
+    ## 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, ...].
+
+| state | year | n\_location |
+| :---- | ---: | ----------: |
+| FL    | 2002 |           7 |
+| MA    | 2002 |           8 |
+| NC    | 2002 |           7 |
+| NJ    | 2002 |           8 |
+| PA    | 2002 |          10 |
+
+``` r
+  separate(tidied_brfss,locationdesc,c("state","county"))%>%
+  group_by(state,year)%>%
+  summarise(n_location=n_distinct(county))%>%
+  filter(n_location>=7, year==2010)%>%
+  knitr::kable()
+```
+
+    ## Warning: Expected 2 pieces. Additional pieces discarded in 10625 rows [1,
+    ## 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, ...].
+
+| state | year | n\_location |
+| :---- | ---: | ----------: |
+| CA    | 2010 |           9 |
+| CO    | 2010 |           7 |
+| FL    | 2010 |          40 |
+| MA    | 2010 |           9 |
+| MD    | 2010 |          11 |
+| NC    | 2010 |          12 |
+| NE    | 2010 |          10 |
+| NJ    | 2010 |          19 |
+| NY    | 2010 |           9 |
+| OH    | 2010 |           8 |
+| PA    | 2010 |           7 |
+| SC    | 2010 |           7 |
+| TX    | 2010 |          16 |
+| WA    | 2010 |          10 |
+
+## Make a “spaghetti” plot
