--- a/p8105_hw3_xl2851.md
+++ b/p8105_hw3_xl2851.md
@@ -11,14 +11,14 @@ library(tidyr)
 library(tidyverse)
 ```
 
-    ## -- Attaching packages --------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ------------------------------------------ tidyverse 1.2.1 --
 
     ## v ggplot2 3.2.1     v purrr   0.3.2
     ## v tibble  2.1.3     v dplyr   0.8.3
     ## v readr   1.3.1     v stringr 1.4.0
     ## v ggplot2 3.2.1     v forcats 0.4.0
 
-    ## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
+    ## -- Conflicts --------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -101,6 +101,10 @@ plot_aisle+geom_point()
 |          5 | 12.87500 |
 |          6 | 12.07692 |
 
+There are 1384617 rows and 15 columns in data ‘instacart’. There are 134
+distinct aisles. Some key variables include 131209 distinct order\_id
+and 131209 distinct user\_id.
+
 # problem 2
 
 ## clean the data
@@ -164,4 +168,61 @@ tidied_brfss=
 | TX    | 2010 |          16 |
 | WA    | 2010 |          10 |
 
+## Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data\_value across locations within a state.
+
+``` r
+brfss_new =
+  tidied_brfss %>% 
+  filter(response == "Excellent") %>% 
+  group_by(year, locationabbr) %>% 
+  mutate(mean = mean(data_value, na.rm = FALSE)) %>%
+  select(year, locationabbr, mean) %>% 
+  distinct() 
+```
+
 ## Make a “spaghetti” plot
+
+``` r
+ggplot(brfss_new, aes(x = year, y = mean, color = locationabbr, group = locationabbr))+
+  geom_line() +
+  theme(legend.position="none") +
+  xlab("Year") +
+  ylab("The average value within a state") +
+  ggtitle("The average value over time within a state")
+```
+
+    ## Warning: Removed 3 rows containing missing values (geom_path).
+
+![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+
+## two-panel plot
+
+``` r
+  tidied_brfss %>%
+  filter(locationabbr=="NY",year %in% c(2006, 2010))%>%
+  ggplot(aes(x = response, y = data_value )) +
+  geom_boxplot(alpha = .5)+
+  facet_grid(~year)+
+  viridis::scale_fill_viridis(discrete = TRUE)
+```
+
+![](p8105_hw3_xl2851_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+
+# problem 3
+
+``` r
+accel_data=read_csv("./accel_data.csv")%>%
+  pivot_longer(
+    activity.1:activity.1440,
+    names_to = "activity",
+    values_to = "count"
+  )
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   .default = col_double(),
+    ##   day = col_character()
+    ## )
+
+    ## See spec(...) for full column specifications.
